[package]
name = "kubernetes-job-executor"
version = "1.0.1"
authors = ["Christian Hubmann <chubmann@electrifai.net>"]
repository = "https://gitlab.operasolutions.com/backend-common/job-executor"
description = "Job executor, that listenes for ampq messages and executes jobs if it receives one"
license = "MIT"
edition = "2021"

[dependencies]
tracing = "0.1.35"
tracing-subscriber = "0.3"
async-trait = "0.1.56"
dotenv = "0.15.0"
lazy_static = "1.4.0"
tokio = { version = "1.19.2", features = ["full"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
deadpool-lapin = "0.10.0"
kube = { version = "0.73.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_19"] }
async-global-executor = "2.1.0"
futures-lite = "1.12.0"
futures = "0.3.17"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
anyhow = "1.0.44"
either = "1.6.1"
edit = "0.1.3"
clap = { version = "3.1.9", default-features = false, features = ["std", "cargo", "derive"] }
chrono = "0.4.7"
regex = "1"
aws-sdk-s3 = "0.15.0"
aws-config = "0.15.0"
aws-sdk-sqs = "0.15.0"
aws-sdk-sts = "0.15.0"
structopt = { version = "0.3", default-features = false }

[[bin]]
name = "scheduler"
path = "src/scheduler.rs"

[[bin]]
name = "job"
path = "src/job.rs"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "bucket"
path = "src/bucket.rs"

[[bin]]
name = "sqs"
path = "src/sqs.rs"

[[bin]]
name = "queue"
path = "src/queue.rs"

